# claude-holiday

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  MIGRATION_TO_UV.md  Makefile  README.md  VALIDATION_GUIDE.md  activate.sh  ch  pyproject.toml  requirements.txt  test_validation.py
.github/workflows/: ci.yml  pre-commit.yaml
assets/characters/: README.md
assets/style_guides/: README.md  base.json  brass.json  corporate.json  default.json  dev.json
assets/templates/overlays/: batch_chaos.json  cron_badge.json  cron_reset.json  freedom.json  no_tests.json  orchestration.json  rate_limit_error.json  rate_limit_ping.json  rbac_toast.json  sandbox_mode.json  scope_creep.json  test_overlay.json
docs/: charter.md  cover-art-generation.md  master_script.md  master_script_v2.md  production-workflow.md  sora2_improvements_summary.md  timelines.md  troubleshooting.md
docs/specs/: cut-uri.md  episode-manifest.md  rcfc.md
episodes/ep00_checking_in/: README.md  episode.yaml
episodes/ep01_first_contact/: episode.yaml
episodes/ep02_absolutely_right/: episode.yaml
episodes/ep03_great_question/: episode.yaml
episodes/ep04_too_many_cocoas/: episode.yaml
episodes/ep05_claude_limit/: episode.yaml
episodes/ep06_innkeepers_shoulder/: episode.yaml
episodes/ep07_slow_and_steady/: episode.yaml
episodes/ep08_while_you_were_sleeping/: episode.yaml
episodes/ep09_the_workspace/: episode.yaml
episodes/ep10_opus_reloaded/: episode.yaml
episodes/ep11_platform_agnostic/: episode.yaml
recipes/: prime-2025.yaml
recipes/examples/: INVALID-bad-audience.yaml  INVALID-empty-episodes.yaml  INVALID-missing-audience.yaml  dev-default.yaml  dev-deterministic.yaml  general-default.yaml  meta-ending.yaml
schemas/: rcfc.schema.json
scripts/: __init__.py  apply_overlays.py  compile_cut.py  extract_prompts.py  generate_captions.py  generate_cover_art.py  generate_cover_art_ai.py  generate_video.py  new_cut.py  pack_release.py  select_winners.py
scripts/config/: audience.dev.yaml  audience.general.yaml  endings.yaml  series.yaml
scripts/providers/: __init__.py  base.py  dummy.py  prebaked.py  sora.py
scripts/rcfc/: __init__.py  uri.py
scripts/utils/: __init__.py  ffmpeg.py  fonts.py
scripts/yt/: __init__.py  metadata.py
tests/: conftest.py  test_apply_overlays_cli.py  test_e2e_compilation.py  test_imports.py  test_integration.py  test_schema_validation.py
tests/fixtures/: __init__.py  test_recipe.yaml
tests/fixtures/overlays/: __init__.py  ffmpeg_spec_empty.json  ffmpeg_spec_multiple.json  ffmpeg_spec_single.json  ffmpeg_spec_special_chars.json  invalid_bad_position.yaml  invalid_missing_text.yaml  invalid_negative_timing.yaml  valid_all_positions.yaml  valid_multiple.yaml  valid_single.yaml
tests/providers/: test_base.py
(+3 files in other folders)
